ubah nama doang

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <div class="box">
           <img src="Assets/review/4.jpg" alt="" />
-          <h3 class="name">Simon Soul</h3>
+          <h3 class="name">Budi Budi</h3>
           <h2>"Coolest Store Ever"</h2>
           <p>This store has all that other stores have, and i really like  how the seller respon, really really fast</p>
         </div>
