banyak yang diubah

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body>
     <!-- header section starts  -->
     <header class="header">
-      <h1>Yamada Motorcycle</h1>
-      <nav class="navbar">
+      <h1 id="palingatas">Yamada Motorcycle</h1>
+      <nav class="navbar" id="navbar">
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#popular">Motorcycle</a>
@@ -28,10 +28,10 @@
 
     <section class="home" id="home">
       <div class="content">
-        <h3>THE <span>BEST</span> <span>MOTORCYCLE</span> <span>STORE</span></h3>
-        <p>This is Yamada Motorcycle store that have a lot of kind of Motorcycle that you want to have, have fun 😀</p>
-        <a href="#popular" class="btn">BUYYYY</a>
-        <a href="adPage.html" class="btn" target="_blank">Our Achivement</a>
+        <h3 id="kata">THE <span>BEST</span> <span>MOTORCYCLE</span> <span>STORE</span></h3>
+        <p id="kata2">This is Yamada Motorcycle store that have a lot of kind of Motorcycle that you want to have, have fun 😀</p>
+        <a href="#popular" class="btn" id="kata3">BUYYYY</a>
+        <a href="adPage.html" id="kata4"class="btn" target="_blank" >Our Achivement</a>
       </div>
     </section>
 
@@ -42,7 +42,7 @@
       <h1 class="heading" id="about"><span>about</span> us</h1>
       <div class="row">
         <div class="image">
-          <img src="Assets/aboutPIcture.jpg" alt="" />
+          <img src="Assets/aboutPIcture.jpg" alt="" id="gambaran" />
         </div>
 
         <div class="content">
@@ -166,7 +166,7 @@
 
     <footer>
       <p>Yamada Motorcycle</p>
-      <p>For <span>more information</span> about Motorcycle please contact our social media below 👇</p>
+      <p id="foot">For <span>more information</span> about Motorcycle please contact our social media below 👇</p>
       <div class="social">
         <a href="https://id-id.facebook.com/login/device-based/regular/login/?login_attempt=1" target= "_blank"><img src="Assets/social/facebook.png" alt=""></a>
         <a href="https://www.instagram.com/" target= "_blank"><img src="Assets/social/ig.png" alt=""></a>
